; ModuleID = '/home/carl/AnghaBench/exploitdb/exploits/linux/remote/extr_23366.c_resolve_host.c'
source_filename = "/home/carl/AnghaBench/exploitdb/exploits/linux/remote/extr_23366.c_resolve_host.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.in_addr = type { i32 }
%struct.hostent = type { i32, i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i64 @resolve_host(i32* %0) #0 {
  %2 = alloca i64, align 8
  %3 = alloca i32*, align 8
  %4 = alloca %struct.in_addr, align 4
  %5 = alloca %struct.hostent*, align 8
  store i32* %0, i32** %3, align 8
  %6 = load i32*, i32** %3, align 8
  %7 = call i32 @inet_addr(i32* %6)
  %8 = getelementptr inbounds %struct.in_addr, %struct.in_addr* %4, i32 0, i32 0
  store i32 %7, i32* %8, align 4
  %9 = getelementptr inbounds %struct.in_addr, %struct.in_addr* %4, i32 0, i32 0
  %10 = load i32, i32* %9, align 4
  %11 = icmp eq i32 %10, -1
  br i1 %11, label %12, label %28

12:                                               ; preds = %1
  %13 = load i32*, i32** %3, align 8
  %14 = call %struct.hostent* @gethostbyname(i32* %13)
  store %struct.hostent* %14, %struct.hostent** %5, align 8
  %15 = load %struct.hostent*, %struct.hostent** %5, align 8
  %16 = icmp ne %struct.hostent* %15, null
  br i1 %16, label %18, label %17

17:                                               ; preds = %12
  store i64 0, i64* %2, align 8
  br label %32

18:                                               ; preds = %12
  %19 = getelementptr inbounds %struct.in_addr, %struct.in_addr* %4, i32 0, i32 0
  %20 = bitcast i32* %19 to i8*
  %21 = load %struct.hostent*, %struct.hostent** %5, align 8
  %22 = getelementptr inbounds %struct.hostent, %struct.hostent* %21, i32 0, i32 1
  %23 = load i32, i32* %22, align 4
  %24 = load %struct.hostent*, %struct.hostent** %5, align 8
  %25 = getelementptr inbounds %struct.hostent, %struct.hostent* %24, i32 0, i32 0
  %26 = load i32, i32* %25, align 4
  %27 = call i32 @memcpy(i8* %20, i32 %23, i32 %26)
  br label %28

28:                                               ; preds = %18, %1
  %29 = getelementptr inbounds %struct.in_addr, %struct.in_addr* %4, i32 0, i32 0
  %30 = load i32, i32* %29, align 4
  %31 = sext i32 %30 to i64
  store i64 %31, i64* %2, align 8
  br label %32

32:                                               ; preds = %28, %17
  %33 = load i64, i64* %2, align 8
  ret i64 %33
}

declare dso_local i32 @inet_addr(i32*) #1

declare dso_local %struct.hostent* @gethostbyname(i32*) #1

declare dso_local i32 @memcpy(i8*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
